--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <div class="carouselBox">
                     <div class="carouselSet">
                         <div class="sliderTitle">
-                            <div class="textTitle">Deals of the Day <img src="Image/timer1.png" alt="Image/timer2.png"
+                            <div class="textTitle" style="width: 90%;">Deals of the Day <img src="Image/timer1.png" alt="Image/timer2.png"
                                     style="height: 25px; width: 25px; margin: 3px;"></div>
                             <div class="viewButton">
                                 <div class="viewText">
