--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             <div class="carouselBox" style="border-top: 1px solid #eaeaea; border-bottom: 1px solid #eaeaea;">
                 <div class="carouselSet">
                     <div class="sliderTitle">
-                        <div class="textTitle">Grooming, Electronics and More</div>
+                        <div class="textTitle" style="width: 90%;">Grooming, Electronics and More</div>
                         <div class="viewButton">
                             <div class="viewText">
                                 <a class="viewTextStyle" href="">VIEW ALL</a>
